--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
-          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">首頁<i class="ion-ios-arrow-forward"></i></a></span> <span>登入註冊 <i class="ion-ios-arrow-forward"></i></span></p>
+          	<p class="breadcrumbs mb-2"> <span>登入註冊 <i class="ion-ios-arrow-forward"></i></span></p>
             <h1 class="mb-0 bread">登入註冊</h1>
           </div>
         </div>
