--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -70,8 +70,7 @@
     <div class="container">
       <div class="row no-gutters slider-text align-items-end">
         <div class="col-md-9 ftco-animate pb-5">
-          <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">首頁 <i
-                  class="ion-ios-arrow-forward"></i></a></span> <span>刊登送養 <i class="ion-ios-arrow-forward"></i></span>
+          <p class="breadcrumbs mb-2"> <span>刊登送養 <i class="ion-ios-arrow-forward"></i></span>
           </p>
           <h1 class="mb-0 bread">刊登送養</h1>
         </div>
