--- a/src/main/resources/templates/public_shelter.html
+++ b/src/main/resources/templates/public_shelter.html
@@ -82,23 +82,24 @@
         </div>
     </div>
 </section>
-
+<hr>
+<div style="margin: auto; width: 600px;">
+    物種 :
+    <select name="animalKind" id="kind">
+        <option>不分種類</option>
+        <option>狗</option>
+        <option>貓</option>
+        <option>其他</option>
+    </select>
+    收容所 :
+    <select name="shelterName" id="shelter">
+        <option>所有收容所</option>
+        <option th:each="s:${shelters}" th:text="${s.getName()}"></option>
+    </select>
+    <button onclick="search()">搜尋</button>
+</div>
 <section class="ftco-section" id="animalContext">
     <div class="container">
-        <div style="margin: auto; width: 600px;">
-            <select name="animalKind" id="kind">
-                <option>不分種類</option>
-                <option>狗</option>
-                <option>貓</option>
-                <option>其他</option>
-            </select>
-            <select name="shelterName" id="shelter">
-                <option>所有收容所</option>
-                <option th:each="s:${shelters}" th:text="${s.getName()}"></option>
-            </select>
-            <button onclick="search()">搜尋</button>
-        </div>
-        <hr>
         <div class="row">
             <div class="col-md-4 ftco-animate" th:each="animal:${animals}">
                 <div class="work mb-4 img d-flex align-items-end"
