--- a/src/main/resources/templates/animal_hospital.html
+++ b/src/main/resources/templates/animal_hospital.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>刊登送養 -寵物資訊平台</title>
+  <title>動物醫院 -寵物資訊平台</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
 
+
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
 
@@ -30,10 +31,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 d-flex align-items-center">
+
       </div>
       <div class="col-md-6 d-flex justify-content-md-end">
         <div class="social-media">
           <p class="mb-0 d-flex">
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
             <a href="#" class="d-flex align-items-center justify-content-center"></a>
           </p>
         </div>
@@ -41,7 +46,6 @@
     </div>
   </div>
 </div>
-
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
   <div class="container">
     <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
@@ -54,9 +58,9 @@
         <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
         <li class="nav-item"><a href="http://localhost:8080/pubic_shelter" class="nav-link">公立領養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-        <li class="nav-item active"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-        <li class="nav-item "><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+        <li class="nav-item active"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
         <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
         <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
       </ul>
@@ -71,33 +75,61 @@
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
         <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-                class="ion-ios-arrow-forward"></i></a></span> <span>刊登送養 <i class="ion-ios-arrow-forward"></i></span>
-        </p>
-        <h1 class="mb-0 bread">刊登送養</h1>
+                class="ion-ios-arrow-forward"></i></a></span> <span>動物醫院<i
+                class="ion-ios-arrow-forward"></i></span></p>
+        <h1 class="mb-0 bread">動物醫院</h1>
       </div>
     </div>
   </div>
 </section>
 
-
 <section class="ftco-section bg-light">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6 text-center mb-5">
-        <h2 class="heading-section"></h2>
+    <div class="row justify-content-center pb-5 mb-3">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h2>Affordable Packages</h2>
       </div>
     </div>
 </section>
 
+<div class="icon"><span class="fa fa-chevron-down"></span></div>
+<select name="" id="" class="form-control">
+  <option value="">Select services</option>
+  <option value="">Cat Sitting</option>
+  <option value="">Dog Walk</option>
+  <option value="">Pet Spa</option>
+  <option value="">Pet Grooming</option>
+  <option value="">Pet Daycare</option>
+</select>
+
+<section class="ftco-section bg-light">
+  <div class="row mt-5">
+    <div class="col text-center">
+      <div class="block-27">
+        <ul>
+          <li><a href="#">&lt;</a></li>
+          <li class="active"><span>1</span></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">&gt;</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
 
 <footer class="footer">
   <div class="row mt-5">
     <div class="col-md-12 text-center">
-      <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+      <p class="copyright">
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         Copyright &copy;
-        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-                class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                                                                  target="_blank">Colorlib.com</a>
+        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+        made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                                                                       target="_blank">Colorlib.com</a>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
       </p>
     </div>
@@ -132,6 +164,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
+
 
 
 </body>
