--- a/src/main/resources/templates/funeral.html
+++ b/src/main/resources/templates/funeral.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>刊登送養 -寵物資訊平台</title>
+  <title>寵物送別 -寵物資訊平台</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
+
 
   <link rel="stylesheet" href="css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="css/jquery.timepicker.css">
@@ -34,6 +35,9 @@
       <div class="col-md-6 d-flex justify-content-md-end">
         <div class="social-media">
           <p class="mb-0 d-flex">
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
             <a href="#" class="d-flex align-items-center justify-content-center"></a>
           </p>
         </div>
@@ -54,10 +58,10 @@
         <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
         <li class="nav-item"><a href="http://localhost:8080/pubic_shelter" class="nav-link">公立領養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-        <li class="nav-item active"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
         <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-        <li class="nav-item "><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
-        <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+        <li class="nav-item active"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
         <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
       </ul>
     </div>
@@ -71,24 +75,41 @@
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
         <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-                class="ion-ios-arrow-forward"></i></a></span> <span>刊登送養 <i class="ion-ios-arrow-forward"></i></span>
+                class="ion-ios-arrow-forward"></i></a></span> <span>寵物送別<i class="ion-ios-arrow-forward"></i></span>
         </p>
-        <h1 class="mb-0 bread">刊登送養</h1>
+        <h1 class="mb-0 bread">寵物送別</h1>
       </div>
     </div>
   </div>
 </section>
 
-
 <section class="ftco-section bg-light">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6 text-center mb-5">
-        <h2 class="heading-section"></h2>
+    <div class="row justify-content-center pb-5 mb-3">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h2>Affordable Packages</h2>
       </div>
     </div>
 </section>
 
+<section class="ftco-section bg-light">
+  <div class="row mt-5">
+    <div class="col text-center">
+      <div class="block-27">
+        <ul>
+          <li><a href="#">&lt;</a></li>
+          <li class="active"><span>1</span></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">&gt;</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
 
 <footer class="footer">
   <div class="row mt-5">
@@ -132,6 +153,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
+
 
 
 </body>
