--- a/src/main/resources/templates/missing.html
+++ b/src/main/resources/templates/missing.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -27,244 +27,143 @@
 
 <body>
 
-  <div class="wrap">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 d-flex align-items-center">
+<div class="wrap">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 d-flex align-items-center">
 
-        </div>
-        <div class="col-md-6 d-flex justify-content-md-end">
-          <div class="social-media">
-            <p class="mb-0 d-flex">
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"></a>
-						</p>
-          </div>
+      </div>
+      <div class="col-md-6 d-flex justify-content-md-end">
+        <div class="social-media">
+          <p class="mb-0 d-flex">
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+            <a href="#" class="d-flex align-items-center justify-content-center"></a>
+          </p>
         </div>
       </div>
     </div>
   </div>
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-    <div class="container">
-      <a class="navbar-brand" ><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="fa fa-bars"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav ml-auto">
+</div>
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+  <div class="container">
+    <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>寵物資訊平台</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="fa fa-bars"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="ftco-nav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/pubic_shelter" class="nav-link">公立領養</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
+        <li class="nav-item active"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
+        <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<!-- END nav -->
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
+         data-stellar-background-ratio="0.5">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row no-gutters slider-text align-items-end">
+      <div class="col-md-9 ftco-animate pb-5">
+        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁<i
+                class="ion-ios-arrow-forward"></i></a></span> <span>走失協尋<i class="ion-ios-arrow-forward"></i></span>
+        </p>
+        <h1 class="mb-0 bread">走失協尋</h1>
+      </div>
+    </div>
+  </div>
+</section>
 
-          <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
-					<li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+<section class="ftco-section bg-light">
+  <div class="container">
+    <div class="row justify-content-center pb-5 mb-3">
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <h2>Affordable Packages</h2>
+      </div>
+    </div>
+</section>
 
-					<li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+<div class="icon"><span class="fa fa-chevron-down"></span></div>
+<select name="" id="" class="form-control">
+  <option value="">Select services</option>
+  <option value="">Cat Sitting</option>
+  <option value="">Dog Walk</option>
+  <option value="">Pet Spa</option>
+  <option value="">Pet Grooming</option>
+  <option value="">Pet Daycare</option>
+</select>
+
+<section class="ftco-section bg-light">
+  <div class="row mt-5">
+    <div class="col text-center">
+      <div class="block-27">
+        <ul>
+          <li><a href="#">&lt;</a></li>
+          <li class="active"><span>1</span></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">&gt;</a></li>
         </ul>
       </div>
     </div>
-  </nav>
-  <!-- END nav -->
-  <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');"
-    data-stellar-background-ratio="0.5">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row no-gutters slider-text align-items-end">
-        <div class="col-md-9 ftco-animate pb-5">
-          <p class="breadcrumbs mb-2"><span>走失協尋<i class="ion-ios-arrow-forward"></i></span>
-          </p>
-          <h1 class="mb-0 bread">走失協尋</h1>
-        </div>
-      </div>
+  </div>
+  </div>
+</section>
+
+<footer class="footer">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      <p class="copyright">
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        Copyright &copy;
+        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
+        made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+                                                                       target="_blank">Colorlib.com</a>
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+      </p>
     </div>
-  </section>
-
-  <section class="ftco-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-1.jpg);">
-            <a href="images/gallery-1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">Persian Cat</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-2.jpg);">
-            <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pomeranian</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-3.jpg);">
-            <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">Sphynx Cat</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-4.jpg);">
-            <a href="images/gallery-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">British Shorthair</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-5.jpg);">
-            <a href="images/gallery-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Beagle</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-6.jpg);">
-            <a href="images/gallery-6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pug</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-7.jpg);">
-            <a href="images/gallery-7.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Cat</span>
-                <h2><a href="work-single.html">British Shorthair</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-8.jpg);">
-            <a href="images/gallery-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Beagle</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 ftco-animate">
-          <div class="work mb-4 img d-flex align-items-end" style="background-image: url(images/gallery-9.jpg);">
-            <a href="images/gallery-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="fa fa-expand"></span>
-            </a>
-            <div class="desc w-100 px-4">
-              <div class="text w-100 mb-3">
-                <span>Dog</span>
-                <h2><a href="work-single.html">Pug</a></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-     
-      <div class="row mt-5">
-        <div class="col text-center">
-          <div class="block-27">
-            <ul>
-              <li><a href="#">&lt;</a></li>
-              <li class="active"><span>1</span></li>
-              <li><a href="#">2</a></li>
-              <li><a href="#">3</a></li>
-              <li><a href="#">4</a></li>
-              <li><a href="#">5</a></li>
-              <li><a href="#">&gt;</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="row mt-5">
-      <div class="col-md-12 text-center">
-        <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;
-          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-            class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-            target="_blank">Colorlib.com</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        </p>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
 
 
 
 
-  <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
-      <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
-      <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-        stroke="#F96D00" />
-    </svg></div>
+<!-- loader -->
+<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
+  <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
+  <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
+          stroke="#F96D00" />
+</svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/bootstrap-datepicker.js"></script>
-  <script src="js/jquery.timepicker.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
-  <script src="js/main.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.animateNumber.min.js"></script>
+<script src="js/bootstrap-datepicker.js"></script>
+<script src="js/jquery.timepicker.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/scrollax.min.js"></script>
+<script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+<script src="js/google-map.js"></script>
+<script src="js/main.js"></script>
 
 
 
