--- a/src/main/resources/templates/animal_hospital.html
+++ b/src/main/resources/templates/animal_hospital.html
@@ -75,7 +75,7 @@
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
         <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-                class="ion-ios-arrow-forward"></i></a></span> <span>動物醫院<i
+                class="ion-ios-arrow-forward"></i></a></span> <span>> 動物醫院<i
                 class="ion-ios-arrow-forward"></i></span></p>
         <h1 class="mb-0 bread">動物醫院</h1>
       </div>
@@ -88,19 +88,12 @@
     <div class="row justify-content-center pb-5 mb-3">
       <div class="col-md-7 heading-section text-center ftco-animate">
         <h2>Affordable Packages</h2>
+        <div class="collapse show" id="collapseOne" role="tabpanel" aria-labelledby="headingOne">
+          <div class="card-body py-3 px-0">
       </div>
     </div>
 </section>
 
-<div class="icon"><span class="fa fa-chevron-down"></span></div>
-<select name="" id="" class="form-control">
-  <option value="">Select services</option>
-  <option value="">Cat Sitting</option>
-  <option value="">Dog Walk</option>
-  <option value="">Pet Spa</option>
-  <option value="">Pet Grooming</option>
-  <option value="">Pet Daycare</option>
-</select>
 
 <section class="ftco-section bg-light">
   <div class="row mt-5">
