--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -75,7 +75,7 @@
 		<div class="row no-gutters slider-text align-items-end">
 			<div class="col-md-9 ftco-animate pb-5">
 				<p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁 <i
-						class="ion-ios-arrow-forward"></i></a></span> <span>一般領養 <i
+						class="ion-ios-arrow-forward"></i></a></span> <span>> 一般領養 <i
 						class="ion-ios-arrow-forward"></i></span></p>
 				<h1 class="mb-0 bread">一般領養</h1>
 			</div>
