--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -23,6 +23,8 @@
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="css/kidz.css">
 </head>
 
 <body>
@@ -82,48 +84,69 @@
 </section>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <div class="col-sm-10">
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalId_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalKind_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalVariety_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalSex_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalSterilization_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="animalBacterin_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="imageUrl_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="description_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="createdDate_static"></label><br>
-                        <label class="col-sm-2 control-label">ID:</label>
-                        <label class="form-control-static" id="lastModifiedDate_static"></label><br>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+<div class="modal-body">
+    <div class="container-fluid">
+        <div class="row">
         </div>
     </div>
 </div>
-
+<!--<div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog"-->
+<!--     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">-->
+<!--    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">-->
+<!--        <div class="modal-content">-->
+<!--&lt;!&ndash;            <div class="modal-header">&ndash;&gt;-->
+<!--&lt;!&ndash;                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>&ndash;&gt;-->
+<!--&lt;!&ndash;                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <span aria-hidden="true">&times;</span>&ndash;&gt;-->
+<!--&lt;!&ndash;                </button>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            <div class="modal-body">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="form-group">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="media media-events-list bg-info">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <a class="media-img">&ndash;&gt;-->
+<!--&lt;!&ndash;                            <img id="imageUrl_static" src="">&ndash;&gt;-->
+<!--&lt;!&ndash;                        </a>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="media-body">&ndash;&gt;-->
+<!--&lt;!&ndash;                            <h3 class="media-heading mt-3 mb-2 ml-3">&ndash;&gt;-->
+<!--&lt;!&ndash;                                <a class="text-white text-capitalize d-block text-truncate" id="animalId_static"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </h3>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <ul class="text-white list-unstyled mb-2">&ndash;&gt;-->
+<!--&lt;!&ndash;                                <il id="animalKind_static"></il>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <p id="description_static"></p>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                        <div class="col">&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <img id="imageUrl_static" src="">&ndash;&gt;-->
+<!--                    &lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                        <div class="col">&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">編號 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalId_static1"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">物種 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalKind_static1"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">品種 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalVariety_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">性別 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalSex_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">絕育 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalSterilization_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">疫苗 :</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalBacterin_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">備註:</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="description_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">刊登日期:</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="createdDate_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">更新日期:</label>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                            <label class="form-control-static" id="lastModifiedDate_static"></label><br>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--            &lt;!&ndash;            <div class="modal-footer">&ndash;&gt;-->
+<!--            &lt;!&ndash;                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>&ndash;&gt;-->
+<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 <hr>
@@ -151,6 +174,7 @@
 </section>
 
 <div style="margin: auto; width: 220px;">
+    <p id="pageInfo"></p><br>
     <button onclick="goPrePage()">上一頁</button>
     <select id="page" onchange="sendPageToServer()">
 
@@ -212,19 +236,13 @@
         url: "/personalAnimals",
         success: function (data) {
             getAnimalList(data);
-            console.log(data["limit"]);
-            console.log(data["offset"]);
-            console.log(data["total"]);
+            // console.log("單頁筆數:"+data["limit"]);
+            // console.log("跳過幾筆資料:"+data["offset"]);
+            // console.log("總筆數:"+data["total"]);
             // console.log(data["results"]);
             // console.log(data["results"][0]);
             // console.log(data["results"][0]["animalId"]);
-
             // console.log(data["results"].length)
-            // for (let i = 0; data["results"].length > i; i++) {
-            //     console.log(data["results"][i]);
-            // }
-            //$("#test1Result").html("");
-
         }
     });
 
@@ -234,16 +252,16 @@
             var html = "<div class='col-md-6 col-lg-3 ftco-animate'>" +
                 "                <div class='staff'>" +
                 "                    <div class='img-wrap d-flex align-items-stretch'>" +
-                "                        <div class='work mb-4 img d-flex align-items-end' style='background-image: url("+item.imageUrl+");'>" +
+                "                        <div class='work mb-4 img d-flex align-items-end' style='background-image: url(" + item.imageUrl + ");'>" +
                 "                        </div>" +
                 "                    </div>" +
                 "                    <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>" +
-                "                        <h3 id='"+item.animalId+"'>編號: "+item.animalId+"</h3>" +
+                "                        <h3 id='" + item.animalId + "'>編號: " + item.animalId + "</h3>" +
                 "                        <div class='faded'>" +
-                "                                <p>物種: "+item.animalKind+"</p>" +
-                "                                <p>品種: "+item.animalVariety+"</p>" +
-                "                                <p>性別: "+item.animalSex+"</p>" +
-                "                                <p>日期: "+item.lastModifiedDate+"</p>" +
+                "                                <p>物種: " + item.animalKind + "</p>" +
+                "                                <p>品種: " + item.animalVariety + "</p>" +
+                "                                <p>性別: " + item.animalSex + "</p>" +
+                "                                <p>日期: " + item.lastModifiedDate + "</p>" +
                 "                        </div>" +
                 "<button type='button' onclick='getAnimalInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>" +
                 "    詳細資料" +
@@ -252,23 +270,95 @@
                 "                </div>" +
                 "            </div>";
 
+
             $("#test1Result").append(html);
-            $.getScript('js/main.js');
+
+            var pages = Math.ceil(data.total/data.limit);
+            var page = 1;
+
+            if (data.offset/data.limit!=0) {
+                page = data.offset / data.limit;
+            }
+
+
+
         })
+        console.log("單頁筆數limit:"+data["limit"]);
+        console.log("跳過幾筆資料offset:"+data["offset"]);
+        console.log("總筆數:"+data["total"]);
+        pageSet(data);
+        $.getScript('js/main.js');
+    }
+    function pageSet(data) {
+        var pages = Math.ceil(data.total/data.limit);
+        var page;
+        console.log(data.offset/data.limit)
+        if (data.offset/data.limit!=0) {
+            page = (data.offset / data.limit)+1;
+        }else {
+            page = 1;
+        }
+        $("#pageInfo").text("頁碼:"+page+" / 總頁數:"+pages+"  總筆數:"+data.total);
+        $("#pageInfo").attr("limit", data.limit);
+        $("#pageInfo").attr("page", page);
+        $("#pageInfo").attr("pages", pages);
+    }
+    function goNextPage() {
+        var limit = parseInt($("#pageInfo").attr("limit"));
+        var page = parseInt($("#pageInfo").attr("page"));
+        var pages = parseInt($("#pageInfo").attr("pages"));
+        if (page < pages) {
+            page = page+1;
+            $("#pageInfo").attr("page", page);
+            $.ajax({
+                type: "GET",
+                url: "/personalAnimals?offset=" + limit*(page-1),
+                success: function (data) {
+                    getAnimalList(data);
+                }
+            })
+        }
+    }
+
+    function goPrePage() {
+        var limit = parseInt($("#pageInfo").attr("limit"));
+        var page = parseInt($("#pageInfo").attr("page"));
+        if (page>1) {
+            page = page-1;
+            $("#pageInfo").attr("page", page);
+            $.ajax({
+                type: "GET",
+                url: "/personalAnimals?offset=" + limit*(page-1),
+                success: function (data) {
+                    getAnimalList(data);
+                }
+            })
+        }
+
     }
 
     function getAnimalInfo(gid) {
 
         var id = $(gid).siblings("h3").attr("id");
         console.log(gid);
+        console.log(id);
         $.ajax({
             type: "GET",
-            url: "/personalAnimals/"+id,
+            url: "/personalAnimals/" + id,
             success: function (data) {
-                $("#animalId_static").text(data.animalId);
+                // $("#animalId_static").text(data.animalId);
+                // $("#animalKind_static").text(data.animalKind);
+                // $("#animalVariety_static").text(data.animalVariety);
+                // $("#animalSex_static_static").text(data.animalSex_static);
+                // $("#animalSterilization_static").text(data.animalSterilization);
+                // $("#animalBacterin_static").text(data.animalBacterin);
+                // $("#description_static").text(data.description);
+                // $("#createdDate_static").text(data.createdDate);
+                // $("#lastModifiedDate_static").text(data.lastModifiedDate);
+                // $("#imageUrl_static").attr("src", data.imageUrl);
 
-                console.log("編號:"+data.animalId+"\n物種:"+data.animalKind+"\n品種:"+data.animalVariety+"\n性別:"+data.animalSex+"\n絕育:"+data.animalSterilization+"\n疫苗:"+data.animalBacterin+
-                    "\n圖片:"+data.imageUrl+"\n備註:"+data.description+"\n刊登日期:"+data.createdDate+"\n更新日期:"+data.lastModifiedDate);
+                console.log("編號:" + data.animalId + "\n物種:" + data.animalKind + "\n品種:" + data.animalVariety + "\n性別:" + data.animalSex + "\n絕育:" + data.animalSterilization + "\n疫苗:" + data.animalBacterin +
+                    "\n圖片:" + data.imageUrl + "\n備註:" + data.description + "\n刊登日期:" + data.createdDate + "\n更新日期:" + data.lastModifiedDate);
 
             }
         });
