增加寵物送別靜態資料

--- a/src/main/resources/templates/funeral.html
+++ b/src/main/resources/templates/funeral.html
@@ -23,6 +23,21 @@
 
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <style>
+    table {
+      border-collapse: collapse;}
+    table,
+    th{
+      text-align: center;
+      border: 2px solid orange;
+      height: 50px;}
+    td {
+      text-align: left;
+      border: 2px solid orange;
+      height: 50px;}
+  </style>
+
 </head>
 
 <body>
@@ -87,10 +102,85 @@
 <section class="ftco-section bg-light">
   <div class="container">
     <div class="row justify-content-center pb-5 mb-3">
-      <div class="col-md-7 heading-section text-center ftco-animate">
-        <h2>Affordable Packages</h2>
-      </div>
-    </div>
+
+      <table width="100%">
+        <tr>
+          <th width="25%">名稱</th>
+          <th width="15%">電話</th>
+          <th width="30%">地址</th>
+          <th width="40%">服務項目</th>
+        </tr>
+        <tr>
+          <td>臺北市動物保護處</td>
+          <td>(02)87913254</td>
+          <td>台北市內湖區潭美街852號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td> 新北市政府動物保護防疫處</td>
+          <td> (02)29596353</td>
+          <td> 新北市板橋區四川路一段157巷2號</td>
+          <td> 政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>宜蘭縣動植物防疫所</td>
+          <td>(03)9602350</td>
+          <td>宜蘭縣五結鄉成興村利寶路60號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>臺中市動物保護防疫處</td>
+          <td>(04)23869420</td>
+          <td>台中市南屯區萬和路一段28-18號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>嘉義市動物保護教育園區</td>
+          <td>(05)2168661</td>
+          <td>嘉義市東區芳草里彌陀路31號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>臺南市動物防疫保護處</td>
+          <td>(06)6323039</td>
+          <td>台南市新營區長榮路一段501號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>高雄市壽山動物保護教育園區</td>
+          <td>(07)5519059</td>
+          <td>高雄市鼓山區萬壽路350號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>高雄市燕巢動物保護關愛園區</td>
+          <td>(07)6051002</td>
+          <td>高雄市燕巢區燕巢區師大路98號	</td>
+          <td>政府機關提供寵物焚化服務	</td>
+        </tr>
+        <tr>
+          <td>宜蘭縣動植物防疫所</td>
+          <td>(03)9602350</td>
+          <td>宜蘭縣五結鄉成興村利寶路60號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>花蓮市動植物防疫所</td>
+          <td>(03)8227431</td>
+          <td>花蓮縣花蓮市瑞美路5號	</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+        <tr>
+          <td>澎湖縣家畜疾病防治所</td>
+          <td>(06)9212839</td>
+          <td>澎湖縣馬公市西文里118之1號</td>
+          <td>政府機關提供寵物焚化服務</td>
+        </tr>
+      </table>
+</body>
+</html>
+</div>
+</div>
 </section>
 
 <section class="ftco-section bg-light">
@@ -101,9 +191,6 @@
           <li><a href="#">&lt;</a></li>
           <li class="active"><span>1</span></li>
           <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
           <li><a href="#">&gt;</a></li>
         </ul>
       </div>
@@ -111,6 +198,8 @@
   </div>
   </div>
 </section>
+
+
 
 <footer class="footer">
   <div class="row mt-5">
